--- a/index.ipynb
+++ b/index.ipynb
@@ -76,20 +76,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
     "    constant, exponent = term\n",
-    "    return ((constant * exponent), e)"
+    "    return ((constant * exponent), exponent - 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_term_derivative(one_x_cubed) # (3, 2)"
    ]
