--- a/index.ipynb
+++ b/index.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return filter(lambda x: [find_term_derivative(term) for term in function_terms])"
+    "    return filter(lambda x: x[1][find_term_derivative(term) for term in function_terms])"
    ]
   },
   {
