--- a/index.ipynb
+++ b/index.ipynb
@@ -148,26 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return filter(lambda x: x[1][find_term_derivative(term) for term in function_terms])"
+    "    return filter(lambda x: x[1] != 0, [find_term_derivative(term) for term in function_terms])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(12, 2), (-3, 0)]"
+       "<filter at 0x7f7d885be860>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
