--- a/index.ipynb
+++ b/index.ipynb
@@ -148,26 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return filter(lambda x: x[1] != 0, [find_term_derivative(term) for term in function_terms])"
+    "    return list(filter(lambda x: x[1] != 0, [find_term_derivative(term) for term in function_terms]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<filter at 0x7f7d885be860>"
+       "[(12, 2)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
