Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -148,12 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "    return list(filter(lambda x: x[1] != -1, [find_term_derivative(term) for term in function_terms]))"
+    "#     return list(filter(lambda x: x[1] != -1, [find_term_derivative(term) for term in function_terms]))\n",
+    "    return [find_term_derivative(term) for term in function_terms]"
    ]
   },
   {
@@ -186,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(6, 1)]"
+       "[(6, 1), (0, -1)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
