--- a/index.ipynb
+++ b/index.ipynb
@@ -153,8 +153,8 @@
    "outputs": [],
    "source": [
     "def find_derivative(function_terms):\n",
-    "#     return list(filter(lambda x: x[1] != -1, [find_term_derivative(term) for term in function_terms]))\n",
-    "    return [find_term_derivative(term) for term in function_terms]"
+    "    return list(filter(lambda x: x[0] != 0, [find_term_derivative(term) for term in function_terms]))\n",
+    "#     return [find_term_derivative(term) for term in function_terms]"
    ]
   },
   {
