--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,8 @@
     "from calculus import output_at\n",
     "\n",
     "def derivative_at(terms, x):\n",
-    "    deriv = "
+    "    deriv = find_derivative(terms)\n",
+    "    "
    ]
   },
   {
