--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "\n",
     "def derivative_at(terms, x):\n",
     "    deriv = find_derivative(terms)\n",
-    "    return list(m)"
+    "    return list(map(lambda x: , ))"
    ]
   },
   {
