--- a/index.ipynb
+++ b/index.ipynb
@@ -1316,7 +1316,7 @@
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
-    "    [derivative_at(terms, x) for x in x_values]"
+    "    derivs[derivative_at(terms, x) for x in x_values]"
    ]
   },
   {
