--- a/index.ipynb
+++ b/index.ipynb
@@ -1317,7 +1317,8 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
-    "    return dict(x=)"
+    "    x, \n",
+    "    return "
    ]
   },
   {
