Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,7 +1319,7 @@
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
     "    x_lst =\n",
     "    y_lst = \n",
-    "    return {'x': x_lst, 'y'}"
+    "    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', }"
    ]
   },
   {
