Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1317,9 +1317,9 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
-    "    x_lst =\n",
+    "    x_lst = \n",
     "    y_lst = \n",
-    "    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', 'name' = 'data', 'te'}"
+    "    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', 'name' = 'data', 'text' = []}"
    ]
   },
   {
