--- a/index.ipynb
+++ b/index.ipynb
@@ -1317,7 +1317,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
-    "    x_lst = \n",
+    "    x_lst = [d[i]]\n",
     "    y_lst = \n",
     "    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', 'name' = 'data', 'text' = []}"
    ]
