Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1317,8 +1317,8 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
-    "    x_lst = [d[0] for d in ]\n",
-    "    y_lst = \n",
+    "    x_lst = [d[0] for d in derivs]\n",
+    "    y_lst = [d[] for d in derivs]\n",
     "    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', 'name' = 'data', 'text' = []}"
    ]
   },
