--- a/index.ipynb
+++ b/index.ipynb
@@ -1311,14 +1311,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-29-478c119d3411>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-478c119d3411>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', 'name' = 'data', 'text' = []}\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
     "    x_lst = [d[0] for d in derivs]\n",
-    "    y_lst = [d[] for d in derivs]\n",
+    "    y_lst = [d[1] for d in derivs]\n",
     "    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', 'name' = 'data', 'text' = []}"
    ]
   },
