Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1328,7 +1328,7 @@
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
     "    x_lst = [d[0] for d in derivs]\n",
     "    y_lst = [d[1] for d in derivs]\n",
-    "    return {'x': x_lst, 'y' = y_lst, 'mode' = 'lines', 'name' = 'data', 'text' = []}"
+    "    return {'x': x_lst, 'y': y_lst, 'mode': 'lines', 'name': 'data', 'text': []}"
    ]
   },
   {
