Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1319,7 +1319,7 @@
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
     "    print(derivs)\n",
     "    return\n",
-    "    return {'x': x_lst, 'y': y_lst, 'mode': 'lines', 'name': 'data', 'text': []}"
+    "    return {'x': x_values, 'y': y_lst, 'mode': 'lines', 'name': 'data', 'text': []}"
    ]
   },
   {
