Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1311,38 +1311,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivs = [derivative_at(terms, x) for x in x_values]\n",
-    "\n",
-    "    return {'x': x_values, 'y': y_lst, 'mode': 'lines', 'name': 'data', 'text': []}"
+    "    return {'x': x_values, 'y': derivs, 'mode': 'lines', 'name': 'data', 'text': []}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-30, -24, -18, -12, -6, 0, 6, 12, 18, 24]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "three_x_squared_minus_eleven_derivative_trace = derivative_function_trace(three_x_squared_minus_eleven, list(range(-5, 5)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [-5, -4, -3, -2, -1, 0, 1, 2, 3, 4],\n",
+       " 'y': [-30, -24, -18, -12, -6, 0, 6, 12, 18, 24],\n",
+       " 'mode': 'lines',\n",
+       " 'name': 'data',\n",
+       " 'text': []}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "three_x_squared_minus_eleven_derivative_trace"
    ]
