Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1382,7 +1382,7 @@
    "source": [
     "from plotly import tools\n",
     "import plotly\n",
-    "import plotly.plotly as py\n",
+    "import chart_.plotly as py\n",
     "\n",
     "from graph import make_subplots\n",
     "\n",
