Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,6 +1380,7 @@
     }
    ],
    "source": [
+    "pip install chart_s\n",
     "from plotly import tools\n",
     "import plotly\n",
     "import plotly.plotly as py\n",
